# Rust-Discovery

./: README.md
codewars/: Cargo.toml
codewars/tests/: persistent_bugger.rs  replace_with_alphabet_position.rs  two_to_one.rs
dtree/: .gitignore  README.md
dtree/src/: lib.rs
dtree/tests/: dtree_tests.rs
modexp/: Cargo.toml  README.md
modexp/src/: lib.rs  main.rs
toy-rsa/: .gitignore  Cargo.toml  README.md
toy-rsa/examples/: toyrsa.rs
toy-rsa/src/: lib.rs
toy-rsa/tests/: toy_rsa_test.rs
yew-app/src/: main.rs
