[package]
name = "toy-rsa"
description="Toy RSA library to generate keys and encrypt/decrypt messages"
version = "0.1.0"
authors = ["Alexander DuPree <alexander.j.dupree@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
toy_rsa_lib = { git = "http://github.com/pdx-cs-rust/toy-rsa-lib" }

[dev-dependencies]
clap = "3.0.0-beta.2"
